--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
     <!-- <script src="node_modules/angular2/bundles/http.dev.js"></script> -->
 
     <!-- Required for routing -->
-    <!-- <script src="node_modules/angular2/bundles/router.dev.js"></script> -->
+    <script src="node_modules/angular2/bundles/router.dev.js"></script>
 
     <script src="https://code.jquery.com/jquery-2.2.3.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
+    
 
     <!-- 2. Configure SystemJS -->
     <script src="systemjs.config.js"></script>
