--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <!-- <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script> -->
     
     <!-- <script src="node_modules/systemjs/dist/system.src.js"></script> -->
-    <!-- <script src="node_modules/rxjs/bundles/Rx.js"></script> -->
+    <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <!-- <script src="node_modules/angular2/bundles/angular2.dev.js"></script> -->
 
     <!-- Required for http -->
-    <!-- <script src="node_modules/angular2/bundles/http.dev.js"></script> -->
+    <script src="node_modules/angular2/bundles/http.dev.js"></script>
 
     <!-- Required for routing -->
     <script src="node_modules/angular2/bundles/router.dev.js"></script>
