--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="//cdn.auth0.com/js/lock-9.0.min.js"></script>
     <script src="node_modules/es6-shim/es6-shim.min.js"></script>
     <!-- <script src="node_modules/systemjs/dist/system-polyfills.js"></script> -->
-    <!-- <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script> -->
+    <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
     
     <!-- <script src="node_modules/systemjs/dist/system.src.js"></script> -->
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
@@ -26,7 +26,6 @@
 
     <!-- Required for routing -->
     <script src="node_modules/angular2/bundles/router.dev.js"></script>
-
     <script src="https://code.jquery.com/jquery-2.2.3.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
