added observable to return customer cart items

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head lang="en">
     <base href="/">
-    <title>AFQ</title>
+    <title>Cartify</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
