--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   
-  <script src="//cdn.auth0.com/js/lock-9.0.min.js"></script>
-  
+  <!--<script src="//cdn.auth0.com/js/lock-9.0.min.js"></script>-->  
   <!--<script src="../node_modules/es6-shim/es6-shim.min.js"></script>-->
   <!--<script src="../node_modules/angular2/bundles/angular2-polyfills.js"></script>-->
   <!--<script src="../node_modules/angular2/bundles/http.dev.js"></script>
