switched from bootstrap to material design

--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,17 @@
 <!doctype html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <base href="/">
+    <head>
+        <meta charset="utf-8">
+        <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  
-  <!--<script src="//cdn.auth0.com/js/lock-9.0.min.js"></script>-->  
-  <!--<script src="../node_modules/es6-shim/es6-shim.min.js"></script>-->
-  <!--<script src="../node_modules/angular2/bundles/angular2-polyfills.js"></script>-->
-  <!--<script src="../node_modules/angular2/bundles/http.dev.js"></script>
-  <script src="../node_modules/angular2/bundles/router.dev.js"></script>-->
-  <script src="https://code.jquery.com/jquery-2.2.3.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-</head>
-<body>
-  <app-content>Loading...</app-content>
-</body>
+        <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.10.0/angular-material.min.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <script src="https://code.jquery.com/jquery-2.2.3.js"></script>
+    </head>
+    <body>
+        <app-root></app-root>
+    </body>
 </html>
